--- a/styles.css
+++ b/styles.css
@@ -80,7 +80,7 @@ h2 {
     text-align: center;
 }
 
-button {
+.content-btn {
     background-color: #3882F6;
     color: #F9FAF8;
     border-radius: 5px;
@@ -90,4 +90,115 @@ button {
     box-shadow: none;
     padding: 10px 30px;
     font-size: medium;
+}
+
+h3 {
+    font-weight: 905;
+    text-align: center;
+    font-size: 36px;
+    color: #1F2937;
+}
+
+.info-box {
+    border: 3px solid #3882F6;
+    border-radius: 10px;
+    height: 130px;
+    width: 130px;
+    margin: auto;
+}
+
+.info-card > p {
+  text-align: center;
+  color: #838486;
+  font-size: 12px;
+  font-weight: 700;
+  margin-top: 5px;
+}
+
+
+.info-illu {
+  gap: 25px;
+    display: flex;
+    justify-content: center;
+    align-items: baseline;
+    padding-left: 10px;
+    padding-bottom: 20px;
+}
+
+.quote {
+    background-color: #E5E7EB;
+    padding: 50px;
+    display: flex;
+    justify-content: center;
+    margin-bottom: 10px;
+  
+}
+
+.quote-text {
+    font-size: 25px;
+    font-weight: lighter;
+    font-style: italic;
+    color: #1F2937;
+    margin-bottom: 0px;
+    line-height: 30px;
+    
+}
+.quote-aut {
+     align-self: flex-end;
+    font-weight: 800;
+    font-size: 20px;
+   margin-top: -10px;
+ 
+    color: #1F2937;
+    
+} 
+
+.quote-con {
+    display: flex;
+    flex-direction: column;
+}
+
+.cta-card {
+    background-color: #3882F6;
+    border-radius: 5px;
+    display: flex;
+    margin: 60px 80px;
+    justify-content: space-around;
+    color: #E5E7EB;
+    padding: 10px 5px; 
+  
+}
+
+.cta-text > p{
+    margin-top: -20px;
+    font-weight: 200;
+    font-size: 15px;
+
+    
+}
+
+.cta-btn {
+    border: 2px solid #E5E7EB ;
+    background-color: #3882F6;
+    color: #F9FAF8;
+    border-radius: 5px;
+   font-weight: 800;
+    
+    outline: none;
+    box-shadow: none;
+    padding-left: 40px;
+     padding-right: 40px;
+        font-size: 16px;
+        height: 40px;
+        align-self: center;
+        
+}
+
+footer {
+    text-align: center;
+    background-color: #1F2937;
+    color: #E5E7EB;
+    padding: 30px;
+   
+    font-size: 12px;
 }
